ast/src/snapshots/transmute_ast__lexer__tests__bad.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Bad(
        "\\",
    ),
    span: 1:1; [0, 1],
}
