ast/src/snapshots/transmute_ast__lexer__tests__colon.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Colon,
    span: 1:1; [0, 1],
}
