ast/src/snapshots/transmute_ast__lexer__tests__comment.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Plus,
    span: 2:1; [12, 13],
}
