ast/src/snapshots/transmute_ast__lexer__tests__eof.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Eof,
    span: 1:1; [0, 0],
}
