ast/src/snapshots/transmute_ast__lexer__tests__identifier_space.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Identifier,
    span: 1:2; [1, 6],
}
