ast/src/snapshots/transmute_ast__lexer__tests__identifier_with_keyword_prefix.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Identifier,
    span: 1:1; [0, 6],
}
