ast/src/snapshots/transmute_ast__lexer__tests__keyword_a.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Identifier,
    span: 1:1; [0, 1],
}
