ast/src/snapshots/transmute_ast__lexer__tests__keyword_annotation.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Annotation,
    span: 1:1; [0, 10],
}
