ast/src/snapshots/transmute_ast__lexer__tests__keyword_else.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Else,
    span: 1:1; [0, 4],
}
