ast/src/snapshots/transmute_ast__lexer__tests__keyword_false.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: False,
    span: 1:1; [0, 5],
}
