ast/src/snapshots/transmute_ast__lexer__tests__keyword_let.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Let,
    span: 1:1; [0, 3],
}
